# cryo_robust

./: .gitignore  README.md  pyproject.toml  requirements.txt
admm/: admm.py  dataset_builder.py  evaluator.py  irls.py  masks.py  run_real.py  run_simulation.py  weights.py
admm/configs/: sideview.yaml
alignment/: align_RL_out.py  align_XMIPP_out.py
data/: base_image.mrc
docs/: estimators.md  experiments.md  testing.md
estimators/: __init__.py  admm.py  base.py  data.py  distances.py  gmm.py  irls.py  results.py  spaces.py  weights.py
irls_method_comparison/: evaluator.py  run_real.py  run_simulation.py
irls_method_comparison/configs/: real_particles.yaml  rec_vol.yaml  sideview.yaml
irls_method_comparison/estimators/: __init__.py  base.py  gmm.py  irls.py  utils.py  weights.py
method_comparison/: dataset_builder.py  evaluation.py  evaluator.py  gmm_evaluation.py  masks.py  results_classes.py  run_real.py  run_simulation.py
method_comparison/domain/: enums.py  metrics.py  reports.py
method_comparison/evaluation/: aggregation.py  classification_metrics.py  frc.py  reconstruction_metrics.py  report_building.py
method_comparison/latex/: classification.py  experiment_info.py  figures.py  images.py  main.py  reconstruction.py  tables.py  weights_and_frc.py
old/: admm_vs_irls.py  gmm_evaluation.py  standardize.py
scripts/: cli.py  common.py  napari_visualization.py  run_real.py  run_simulation.py
tests/: test_basic_metrics.py  test_estimators.py  test_weights_and_distances.py
utils/: evaluation.py  masks.py  space.py
(+35 files in other folders)
